--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:file:~/app
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-server.context-path=/
+#Flyway configuration
+flyway.enabled=true
+flyway.baseline-on-migrate=true
+flyway.locations=classpath:db/migration
