added jdbi implementation

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <artifactId>sql2o</artifactId>
             <version>1.5.4</version>
         </dependency>
+        <dependency>
+    		<groupId>org.jdbi</groupId>
+    		<artifactId>jdbi</artifactId>
+    		<version>2.78</version>
+		</dependency>
 	</dependencies>
 
 	<build>
